[package]
name = "ingester"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
config.workspace = true
infra.workspace = true
wal.workspace = true
arrow.workspace = true
arrow-schema.workspace = true
bytes.workspace = true
byteorder.workspace = true
chrono.workspace = true
futures.workspace = true
hashbrown.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
once_cell.workspace = true
parquet.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
async-walkdir.workspace = true
futures-locks = "0.7.1"
[[bin]]
name = "wal-reader"
path = "bin/wal-reader.rs"
