[package]
name = "openobserve-ingestion"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
enterprise = [
    "dep:o2_enterprise",
    "common/enterprise",
    "config/enterprise",
    "openobserve-alerts/enterprise",
    "openobserve-pipeline/enterprise",
    "openobserve-scheduler/enterprise",
    "openobserve-transform/enterprise",
]
cloud = [
    "enterprise",
    "o2_enterprise/cloud",
    "common/cloud",
    "openobserve-alerts/cloud",
    "openobserve-pipeline/cloud",
]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
common.workspace = true
config.workspace = true
infra.workspace = true
ingester.workspace = true
log.workspace = true
o2_enterprise = { workspace = true, optional = true, default-features = false }
opentelemetry-proto.workspace = true
openobserve-alerts.workspace = true
openobserve-catalog.workspace = true
openobserve-pipeline.workspace = true
openobserve-scheduler.workspace = true
openobserve-transform.workspace = true
proto.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
utoipa.workspace = true

[dev-dependencies]
arrow-schema.workspace = true
