[package]
name = "openobserve-jobs"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
enterprise = [
    "dep:o2_dex",
    "dep:o2_enterprise",
    "dep:o2_openfga",
    "compaction/enterprise",
    "enrichment-data/enterprise",
    "openobserve-core/enterprise",
    "openobserve-org-storage/enterprise",
    "promql-service/enterprise",
    "search_service/enterprise",
    "stream/enterprise",
    "tantivy_utils/enterprise",
]
cloud = [
    "enterprise",
    "o2_enterprise/cloud",
    "openobserve-core/cloud",
    "stream/cloud",
]
vectorscan = [
    "openobserve-core/vectorscan",
    "promql-service/vectorscan",
    "search_service/vectorscan",
    "stream/vectorscan",
]

[dependencies]
audit.workspace = true
common.workspace = true
db.workspace = true
openobserve-core.workspace = true
openobserve-node.workspace = true
openobserve-builtins.workspace = true
openobserve-org-storage.workspace = true
ingestion-common.workspace = true
schema.workspace = true
compaction.workspace = true
stream.workspace = true
enrichment-data.workspace = true
promql-service.workspace = true
search.workspace = true
search_service.workspace = true
tantivy_utils.workspace = true
anyhow.workspace = true
async-trait.workspace = true
arrow.workspace = true
arrow-schema.workspace = true
bytes.workspace = true
chrono.workspace = true
config.workspace = true
futures.workspace = true
hashbrown.workspace = true
infra.workspace = true
ingester.workspace = true
log.workspace = true
transform.workspace = true
o2_dex = { workspace = true, optional = true }
o2_enterprise = { workspace = true, optional = true, default-features = false }
o2_openfga = { workspace = true, optional = true }
prometheus.workspace = true
proto.workspace = true
regex.workspace = true
report_server.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
wal.workspace = true
