[package]
name = "maintenance"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
default = []
enterprise = ["dep:o2_enterprise"]

[dependencies]
anyhow.workspace = true
bytes.workspace = true
config.workspace = true
hashbrown.workspace = true
infra.workspace = true
log.workspace = true
o2_enterprise = { workspace = true, optional = true, default-features = false }

[dev-dependencies]
tokio.workspace = true
